Fix issue with inline codeblocks on mobile

--- a/static/css/logstyle.css
+++ b/static/css/logstyle.css
@@ -208,6 +208,10 @@ body {
     body {
         font-size: 85%
     }
+
+    .pre--inline {
+        font-size: 85%
+    }
 }
 
 
